--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,20 @@ html{
     padding: 2rem;
     border-bottom: 1px solid grey;
 }
+
+#home img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 100%;
+}
+
+#home .name h2 {
+
+    margin-bottom: 0.75rem;
+}
+
+#home .name p {
+
+    opacity: 0.5;
+    font-style: italic;
+}
