--- a/css/global.css
+++ b/css/global.css
@@ -33,6 +33,34 @@
     background: #336ea2;
 }
 
+/* Buttons*/
+
+.btn {
+    margin-top: 1.25rem;
+    border-radius: 15px;
+    padding: 0.8rem 3rem;
+    letter-spacing: 0.5px;
+}
+.btn-primary {
+    background: #336ea2;
+}
+
+.btn-primary:hover {
+    color: #336ea2;
+    background: #fff;
+    border: 0.5px solid #336ea2 ;
+}
+
+.btn-dark {
+    background: #333;
+}
+
+.btn-dark:hover {
+    background: #fff;
+    color: #333;
+    border: 0.5px solid #333;
+    
+}
 /*  Container */
 
 .container {
