--- a/css/main.css
+++ b/css/main.css
@@ -69,3 +69,26 @@ html{
     opacity: 0.5;
     font-style: italic;
 }
+
+/* Training */
+
+#training {
+
+    color: #fff;
+    padding: 1rem;
+}
+
+#training .items {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+#training .items .item {
+
+    width: 33%;
+    text-align: center;
+    padding: 0.5rem;
+}
