--- a/css/global.css
+++ b/css/global.css
@@ -61,9 +61,33 @@
     border: 0.5px solid #333;
     
 }
+
+.btn-block {
+    width: 100%;
+    text-align: center;
+}
+
+/* Forms */
+
+.form-group{
+    padding: 0.25rem 0;
+}
+
+.form-group label{
+    display: block;
+}
+
+.form-control{
+    width: 100%;
+    padding: 0.25rem;
+    font-size: 1rem;
+    resize: none;
+    border-radius: 5px;
+}
 /*  Container */
 
 .container {
     max-width: 1100px;
     margin: 0 auto;
 }
+
