--- a/css/main.css
+++ b/css/main.css
@@ -92,3 +92,103 @@ html{
     text-align: center;
     padding: 0.5rem;
 }
+
+#training .items .item:hover{
+
+    color: red;
+    opacity: 0.6;
+}
+
+/* Courses */
+
+#courses{
+    color: #333;
+    padding: 1rem;
+}
+
+.courses {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.courses .course {
+    display: flex;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.courses .course .course-image {
+    margin-right: 0.5rem;
+    position: relative;
+}
+
+.courses .course .course-image img {
+    border-radius: 10px;
+}
+
+.courses .course .course-image span {
+    background: red;
+    padding: 0.25rem;
+    color:#fff;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.courses .course .course-info .title {
+    letter-spacing: 1.1px;
+    font-weight: 700;
+    margin-bottom: 0.25rem;
+}
+
+.courses .course .course-info .description {
+    letter-spacing: 1.1px;
+    opacity: 0.6;
+    margin-bottom: 0.25rem;
+}
+
+.courses .course .course-info .instructor {
+    font-size: 0.8rem;
+    opacity: 0.6;
+    margin-bottom: 0.25rem;
+}
+
+.courses .course .course-info .rating {
+    font-size: 0.8rem;
+    opacity: 0.6;
+    margin-bottom: 0.25rem;
+}
+
+/* Contact */
+
+#contact {
+    color: #fff;
+    padding: 1rem;
+}
+
+#contact .contact-form{
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+
+#contact .contact-form ul{
+    list-style-type: none;
+    display: flex;
+    margin-top: 1rem;
+    align-self: center;
+}
+
+#contact .contact-form ul li a{
+    padding: 1rem;
+    font-size: 2rem;
+}
+
+#contact .contact-form ul li a:hover{
+    opacity: 0.8;
+}
